...
    scrollController.addListener(_onScroll);
  }

  @override
  Widget build(BuildContext context) {
    return UIScaffold(
      header: const Text('CatBreeds'),
      body: SafeArea(
        child: Column(
          children: [
            Padding(
              padding: const EdgeInsets.all(16.0),
              child: UITextField(
                placeholder: 'Search breeds',
                controller: searchController,
                onChanged: _onSearch,
                suffix: UIIconButton(
                  onPressed: () {
                    searchController.clear();
                    _onSearch('');
...
